--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "form-serialize": "^0.7.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.0",
     "react-bootstrap-navbar": "^1.1.0",
     "react-dom": "^16.3.0",
     "react-icons": "^2.2.7",
+    "react-modal": "^3.3.2",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
