--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "form-serialize": "^0.7.2",
+    "moment": "^2.22.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.0",
+    "react-autosize-textarea": "^3.0.3",
     "react-bootstrap-navbar": "^1.1.0",
     "react-dom": "^16.3.0",
     "react-icons": "^2.2.7",
@@ -14,10 +16,14 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-validation": "^3.0.7",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "uuid": "^3.2.1"
+    "sort": "0.0.3",
+    "sort-by": "^1.2.0",
+    "uuid": "^3.2.1",
+    "validator": "^9.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
