--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap-navbar": "^1.1.0",
     "react-dom": "^16.3.0",
     "react-icons": "^2.2.7",
+    "react-loading": "^2.0.2",
     "react-modal": "^3.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
