--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "form-serialize": "^0.7.2",
+    "material-ui": "^0.20.1",
     "moment": "^2.22.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.0",
